[project]
name = "catherine-chan"
version = "0.7.3"
description = "An informational LGBTQ based discord bot"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<4.0"

[tool.isort]
profile = 'black'
combine_as_imports = true
combine_star = true
line_length = 80

[tool.pyright]
include = ["bot/**"]
exclude = [
    "**/__pycache__", 
    "**/.mypy_cache", 
    "**/.dmpypy.json", 
    "docs",
    "docker"
]
reportMissingImports = true
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.bandit]
skips = ["B311", "B101"]

[tool.ruff.lint]
ignore = ["E501", "N999", "E402", "S101"]
select = ["E", "F", "N", "ASYNC", "S", "ERA"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests"
]
pythonpath = ["bot"]